<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_pagamento">Pagamento</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="selected_item">Selected item:</string>

    <string-array name="modalidade">
        <item>Selecione o item:</item>
        <item>futebol</item>
        <item>Volei</item>
        <item>Basquete</item>
        <item>Tênis</item>
    </string-array>

    <string-array name="horarios">

        <item>Selecione um horario:</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
    </string-array>

    <string-array name="quadra">
        <item>Selecione uma quadra:</item>
        <item>quadra c2</item>
        <item>quadra c3</item>
        <item>quadra t1</item>
        <item>quadra t2</item>
    </string-array>

    <string-array name="centro">
        <item>Selecione um centro:</item>
        <item>Poliesportiva</item>
        <item>Grama natural</item>
        <item>Grama sintetica</item>
    </string-array>

    <style name="corTextoSpinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
        <item name="android:paddingStart">0dp</item>
        <item name="android:paddingEnd">0dp</item>
        <item name="android:textColor">@color/blue_resenha2</item>
        <item name="android:backgroundTint">@color/white</item>
        <item name="android:textSize">17sp</item>
    </style>

    <string name="futebol">Futebol</string>
    <string name="basquete">Basquete</string>
    <string name="tenis">Tênis</string>
    <string name="volei">Vôlei</string>


    <string name="aceite">Li e concordo com os</string>
    <string name="termos"> Termos de aceite</string>
    <string name="aceiteDeTermos">Este documento visa registrar a manifestação livre, informada e inequívoca pela qual o usuário concorda com o tratamento de seus dados pessoais para finalidade específica, em conformidade com a Lei no 13.709 – Lei Geral de Proteção de Dados Pessoais (LGPD).
Ao aceitar o presente termo, o usuário consente e concorda que a empresa FACISC – Federação das Associações Empresariais de Santa Catarina, CNPJ no 78.354.636/0001-29, com sede na Rua Visconde de Cairú, 391 – Bairro Estreito – Florianópolis/SC, telefone (48) 3952.8844, e-mail facisc@facisc.org.br, doravante denominada Controlador, tome decisões referentes ao tratamento de seus dados pessoais, bem como realize o tratamento de seus dados pessoais, envolvendo operações como as que se referem a coleta, produção, recepção, classificação, utilização, acesso, reprodução, transmissão, distribuição, processamento, arquivamento, armazenamento, eliminação, avaliação ou controle da informação, modificação, comunicação, transferência, difusão ou extração.
Dados Pessoais
O Controlador fica autorizado a tomar decisões referentes ao tratamento e a realizar o tratamento dos seguintes dados pessoais do Titular:
 Nome completo.
 ACI que preside.
 Número do Cadastro de Pessoas Físicas (CPF).
 Endereço de e-mail pessoal
 Regional da Facisc a qual a entidade que preside faz parte.
 Validade do seu mandado
 Seu voto em votações virtuais referente a itens estatutários.
Finalidades do Tratamento dos Dados
O tratamento dos dados pessoais listados neste termo tem as seguintes finalidades:
 Possibilitar que o Controlador identifique e entre em contato com o Titular para fins de relacionamento.
 Possibilitar que o Controlador possa dar acesso ao sistema de votação da Facisc.
Compartilhamento de Dados
O Controlador fica autorizado a compartilhar os dados pessoais do Titular com outros agentes de tratamento de dados, caso seja necessário para as finalidades listadas neste termo, observados os princípios e as garantias estabelecidas pela Lei no 13.709.
Segurança dos Dados
O Controlador responsabiliza-se pela manutenção de medidas de segurança, técnicas e administrativas aptas a proteger os dados pessoais de acessos não autorizados e de situações acidentais ou ilícitas de destruição, perda, alteração, comunicação ou qualquer forma de tratamento inadequado ou ilícito.
Em conformidade ao art. 48 da Lei no 13.709, o Controlador comunicará ao Titular e à Autoridade Nacional de Proteção de Dados (ANPD) a ocorrência de incidente de segurança que possa acarretar risco ou dano relevante ao Titular.
Término do Tratamento dos Dados
O Controlador poderá manter e tratar os dados pessoais do Titular durante todo o período em que os mesmos forem pertinentes ao alcance das finalidades listadas neste termo. Dados pessoais anonimizados, sem possibilidade de associação ao indivíduo, poderão ser mantidos por período indefinido.
O Titular poderá solicitar via e-mail ou correspondência ao Controlador, a qualquer momento, que sejam eliminados os dados pessoais não anonimizados do Titular
Direitos do Titular
O Titular tem direito a obter do Controlador, em relação aos dados por ele tratados, a qualquer momento e mediante requisição: I - confirmação da existência de tratamento; II - acesso aos dados; III - correção de dados incompletos, inexatos ou desatualizados; IV - anonimização, bloqueio ou eliminação de dados desnecessários, excessivos ou tratados em desconformidade com o disposto na Lei no 13.709; V - portabilidade dos dados a outro fornecedor de serviço ou produto, mediante requisição expressa, de acordo com a regulamentação da autoridade nacional, observados os segredos comercial e industrial; VI - eliminação dos dados pessoais tratados com o consentimento do titular, exceto nas hipóteses previstas no art. 16 da Lei no 13.709; VII - informação das entidades públicas e privadas com as quais o controlador realizou uso compartilhado de dados; VIII - informação sobre a possibilidade de não fornecer consentimento e sobre as consequências da negativa; IX - revogação do consentimento, nos termos do § 5o do art. 8o da Lei no 13.709.
Direito de Revogação do Consentimento
Este consentimento poderá ser revogado pelo usuário, a qualquer momento, mediante solicitação via e-mail ou correspondência ao Controlador.</string>


    <string name="horario1">09:00 - 10:00</string>
    <string name="horario2">10:00 - 11:00</string>
    <string name="horario3">11:00 - 12:00</string>
    <string name="horario4">12:00 - 13:00</string>
    <string name="horario5">13:00 - 14:00</string>
    <string name="horario6">14:00 - 15:00</string>
    <string name="horario7">15:00 - 16:00</string>
    <string name="horario8">16:00 - 17:00</string>
    <string name="horario9">17:00 - 18:00</string>
    <string name="nome_centro1">SPTech</string>
    <string name="nome_centro2">Esports ABC</string>
    <string name="nome_centro3">Lars Kepler</string>
    <string name="nome_quadra1">Quadra - A1</string>
    <string name="nome_quadra2">Quadra - PoliEsportiva</string>
    <string name="nome_quadra3">Quadra - EA Sports</string>
    <string name="descricao_quadra1">Rua Haddock Lobo 113, Cerqueira César, São Paulo</string>
    <string name="valor_quadra1">Valor por hora R$89,00</string>

</resources>