<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/textview_border"
            android:layout_gravity="center">

        <ImageView
                android:id="@+id/img_quadra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/quadra1" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_marginTop="8dp"
                        android:id="@+id/text_centro_esportivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome_centro1"
                        android:textColor="@color/blue_resenha2"
                        android:textSize="18sp" />

                <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:id="@+id/text_quadra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome_quadra1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

            </LinearLayout>

            <TextView
                    android:id="@+id/text_endereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao_quadra1" />

            <TextView
                    android:id="@+id/text_preco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="@string/valor_quadra1" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="10dp">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Ver Quadra"
                        android:onClick="irParaQuadra"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/blue_resenha2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>