<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaQuadras">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/quadra_volei" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="25dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Riplay Sports"
                        android:textColorHint="@color/blue_resenha2"
                        android:textSize="20dp" />

                <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Quadra - C1"
                        android:textColor="@color/blue_resenha2"
                        android:textSize="18sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R. Cel. Domingos Ferreira, 342 - Cursino, São Paulo" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="Valor por hora R$75,00" />

            </LinearLayout>

            <CalendarView
                    android:layout_gravity="center"
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="25dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Horarios disponiveis:" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                    <TextView
                            android:onClick="horario1"
                            android:id="@+id/horario1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario1" />

                    <TextView
                            android:onClick="horario2"
                            android:id="@+id/horario2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario2"
                            android:layout_marginLeft="15dp" />

                    <TextView
                            android:onClick="horario3"
                            android:id="@+id/horario3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario3"
                            android:layout_marginLeft="15dp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                    <TextView
                            android:onClick="horario4"
                            android:id="@+id/horario4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario4" />

                    <TextView
                            android:onClick="horario5"
                            android:id="@+id/horario5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario5"
                            android:layout_marginLeft="15dp" />

                    <TextView
                            android:onClick="horario6"
                            android:id="@+id/horario6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario6"
                            android:layout_marginLeft="15dp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                    <TextView
                            android:onClick="horario7"
                            android:id="@+id/horario7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario7" />

                    <TextView
                            android:onClick="horario8"
                            android:id="@+id/horario8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario8"
                            android:layout_marginLeft="15dp" />

                    <TextView
                            android:onClick="horario9"
                            android:id="@+id/horario9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horario9"
                            android:layout_marginLeft="15dp" />

                </LinearLayout>

                <TextView
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Informações da quadra"
                        android:textSize="18sp" />

                <TextView
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea " />

                <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                    <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="Ver no mapa"
                            android:textColorHint="@color/blue_resenha2"
                            android:backgroundTint="@color/transaparent" />

                    <Button
                            android:layout_marginLeft="30dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="Agendar"
                            android:onClick="pagar"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/blue_resenha2" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>