<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaDeOpcoes">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <!--        linear da imagem-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_logo_resenha2"
                        android:layout_marginLeft="13dp" />

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_resenha"
                        android:text="O que você quer Jogar?"
                        android:textAlignment="center"
                        android:textSize="24.84sp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/modalidadeFutebol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:onClick="modalidadeFutebol">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_resenha"
                        android:layout_marginTop="30dp"
                        android:text="@string/futebol"
                        android:textAlignment="center"
                        android:textSize="24.84sp" />

                <ImageView
                        android:layout_width="295dp"
                        android:layout_height="170dp"
                        android:src="@drawable/futebol"
                        android:layout_marginLeft="60dp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/modalidadeBasquete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:onClick="modalidadeBasquete">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/blue_resenha"
                        android:text="@string/basquete"
                        android:textAlignment="center"
                        android:textSize="24.84sp" />

                <ImageView
                        android:layout_width="295dp"
                        android:layout_height="170dp"
                        android:src="@drawable/basquete"
                        android:layout_marginLeft="60dp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/modalidadeTenis"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:onClick="modalidadeTenis">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/blue_resenha"
                        android:text="@string/tenis"
                        android:textAlignment="center"
                        android:textSize="24.84sp" />

                <ImageView
                        android:layout_width="293dp"
                        android:layout_height="170dp"
                        android:src="@drawable/tenis"
                        android:layout_marginLeft="60dp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/modalidadeVolei"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:onClick="modalidadeVolei">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_resenha"
                        android:layout_marginTop="30dp"
                        android:text="@string/volei"
                        android:textAlignment="center"
                        android:textSize="24.84sp" />

                <ImageView
                        android:layout_width="295dp"
                        android:layout_height="170dp"
                        android:layout_marginLeft="60dp"
                        android:src="@drawable/volei" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>